--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -9,4 +9,12 @@
 
 .totalSum {
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.ingredientCard {
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
