--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,51 +1,3 @@
-.burgerIngredientsList {
+.burger-ingredients {
     width: 600px;
-}
-
-.ingredientsGroupList {
-    overflow-y: auto;
-    height: calc(100vh - 325px);
-}
-
-.ingredientsGroupList::-webkit-scrollbar {
-    width: 10px;
-}
-
-.ingredientsGroupList::-webkit-scrollbar-thumb {
-    border: 2px solid #2F2F37;
-    border-radius: 6px;
-    background-color: #8585AD;
-
-}
-
-.ingredientsGroupList::-webkit-scrollbar-track {
-    background-color: #2F2F37;
-}
-
-.ingredientCardWrapper {
-    display: flex;
-}
-
-.ingredientCard {
-    display: flex;
-    flex-direction: column;
-    width: 272px;
-    align-items: center;
-}
-
-.ingredientGroupItems {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    gap: 24px;
-}
-
-.ingredientCardPrice {
-    display: flex;
-    justify-content: center;
-}
-
-.ingredientCounter {
-    display: flex;
-    position: relative;
 }
