--- a/src/components/burger-constructor/components/ingredient-card/ingredient-card.module.css
+++ b/src/components/burger-constructor/components/ingredient-card/ingredient-card.module.css
@@ -1,6 +1,11 @@
+.ingredient-card__wrapper {
+    cursor: pointer;
+}
+
 .ingredient-card__stuffing-list {
     display: flex;
     flex-wrap: nowrap;
     gap: 8px;
     align-items: center;
+    cursor: pointer;
 }
